--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -1044,7 +1044,7 @@ section.traffic_patrol .traffic_patrol-new_NOSLIDER .garage_model_card {
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
-    border: 1px solid white;
+    border: 2px solid white;
     width: 100%;
     height: 100%;
 
@@ -1306,6 +1306,12 @@ section.situation_centre .situation_centre_grid-wrapper .man_text-7 .man_text-te
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 24px;
+}
+
+section.situation_centre .situation_centre_grid-wrapper .major_events-3,
+section.situation_centre .situation_centre_grid-wrapper .man_text-7 {
+    display: flex;
+    align-items: center;
 }
 
 section.situation_centre .situation_centre_grid-wrapper .man_plus_major_events-8 {
@@ -1964,7 +1970,8 @@ footer.footer_main .container_main:after {
 
 footer.footer_main .container_main {
     border: none;
-    padding: 0 20px 60px 20px;
+    /*padding: 0 20px 60px 20px;*/
+    padding: 0 20px 40px 20px;
 }
 
 
