Новые правки по сайту

--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -1211,6 +1211,7 @@
     /*    align-items: flex-end;*/
     /*    justify-self: flex-end;*/
     /*}*/
+    /*}*/
 
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons button {
         width: 64px;
