--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -654,7 +654,8 @@ a-scene {
     -webkit-backdrop-filter: blur(6px);
     border-radius: 12px;
     height: 224px;
-    padding: 20px;
+    /*padding: 20px;*/
+    padding: 19px;
     /* width: min-content; */
     width: 100%;
     max-width: 850px;
