--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -229,6 +229,74 @@ a-scene {
 /*}*/
 
 
+
+
+/*магия уголков начата*/
+
+.tech_spec__mission-panel,
+.tech_spec__outfit-panel {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+    border: 1px solid #787878;
+    transition: all .3s ease;
+}
+
+.tech_spec__mission-panel-background,
+.tech_spec__outfit-panel-background {
+    position: absolute;
+    width: 101%;
+    height: 108%;
+    top: -1px;
+    left: -1px;
+    background: rgba(255, 255, 255, 0.10);
+    z-index: 1;
+}
+
+.tech_spec__mission-panel .tech_spec__text,
+.tech_spec__outfit-panel .tech_spec__text {
+    position: relative;
+    z-index: 2;
+}
+
+.tech_spec__mission-panel:before,
+.tech_spec__mission-panel:after,
+.tech_spec__outfit-panel:before,
+.tech_spec__outfit-panel:after {
+    content: "";
+    z-index: -1;
+    display: block;
+    position: absolute;
+    background: #000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
+
+.tech_spec__mission-panel:before,
+.tech_spec__outfit-panel:before {
+    width: calc(100% + 6px);
+    height: 68%;
+    z-index: 1;
+    transition: height 0.6s;
+}
+
+
+.tech_spec__mission-panel:after,
+.tech_spec__outfit-panel:after {
+    height: calc(100% + 5px);
+    width: 96%;
+    z-index: 0;
+    transition: width 0.7s;
+}
+
+/*магия уголков закончена*/
+
+
+
+
 /*tech_spec*/
 
 .tech_spec {
@@ -362,11 +430,17 @@ a-scene {
     opacity: 0.4;
 }
 
+.tech_spec__mission-panel {
+    margin-bottom: 12px;
+    padding: 10px 0;
+}
+
 .tech_spec__text {
     font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
     font-size: 18px;
-    margin-bottom: 12px;
+    text-align: center;
+    /*margin-bottom: 12px;*/
 }
 
 .tech_spec__text-descr {
@@ -380,9 +454,14 @@ a-scene {
     margin: 0;
 }
 
-.tech_spec__outfit .tech_spec__text {
+.tech_spec__outfit-panel {
+    padding: 10px 0;
     margin-bottom: 16px;
 }
+
+/*.tech_spec__outfit .tech_spec__text {*/
+/*    margin-bottom: 16px;*/
+/*}*/
 
 .tech_spec__outfit-list {
     display: flex;
@@ -445,11 +524,13 @@ a-scene {
     font-size: 14px;
     margin-right: 12px;
     transition: transform 0.3s ease;
+    pointer-events: none;
 }
 
 .tech_spec__btn img {
     transition: transform 0.3s ease;
     transform: rotate(180deg);
+    pointer-events: none;
 }
 
 .tech_spec__btn img.rotate {
